stop aligning center

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -7,7 +7,6 @@ h2{
 .row{
     display: flex;
     flex-flow: row wrap;
-    align-items: center;
 }
 .tool-block{
     display: flex;
